test/spec_vectors/data/ok/module_6.wat
(module (global (import "spectest" "global_i32") i32) (import "spectest" "memory" (memory 1)) (data (global.get 0) "a"))