test/spec_vectors/data/fail/module_63.wat
(module (global (import "test" "global-i32") i32) (memory 1) (data (global.get 1)))